Pull up following revision(s) (requested by buhrow in ticket #1085): 	src/lib/libc/net/gethnamaddr.c: patch Fix parsing of /etc/hosts.  PR lib/48926.